nav menu now centering

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 							<li class="primary_nav md:flex md:justify-center md:w-full lg:w-auto lg:ml-auto lg:mr-auto xl:mr-0 items-center" v-bind:class="{'block': m_showing, 'hidden': !m_showing}">
 								<a href="#" class="menu-title md:px-4 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0">Our Work</a>
 								<a href="#" class="menu-title md:px-4 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0">Services</a>
-								<button class="menu-title border-none md:pl-4 pr-0 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-one' name="Company">Company</button><i class="text-blue-500 ml-1 md:pr-4 fa fa-angle-down"></i>
+								<button class="menu-title border-none md:pl-4 pr-0 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-one' name="Company">Company<i class="text-blue-500 ml-1 md:pr-4 fa fa-angle-down"></i></button>
 								<div class="vertical-menu" data-nav='menu-one' data-menu-place='left' v-bind:style="{ display: display.one }">
 									<ul class="subnav">
 									
@@ -41,7 +41,7 @@
 								</div>
 								<a href="#" class="menu-title md:px-4 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0">Careers</a>
 								<a href="#" class="menu-title md:px-4 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0">Contact</a>
-								<button class="menu-title border-none md:pl-4 pr-0 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-two' name="Acquisitions">Acquisitions</button><i class="text-blue-500 ml-1 md:pr-4 fa fa-angle-down"></i>
+								<button class="menu-title border-none md:pl-4 pr-0 py-3 md:py-1 block md:flex mr-auto ml-auto md:m-0" v-on:mouseover.self="hovermenu" v-on:click.self="togglemenu" v-on:mouseout='hideboard' data-menu='menu-two' name="Acquisitions">Acquisitions<i class="text-blue-500 ml-1 md:pr-4 fa fa-angle-down"></i></button>
 								<div class="vertical-menu" data-nav='menu-two' data-menu-place='left' v-bind:style="{ display: display.two }">
 									<ul class="subnav">
 									
