banner and banner text added

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,17 @@
 				</nav>
 			</div>
 	</header>
+	<div class="flex mb-4">
+		<div class="w-full banner-home flex items-center">
+			<div class="flex items-center justify-end bg-blue-500 banner-box">
+				<div class="text-white banner-text">
+					<h2 class="heading-m">Always Safe Always Prepared</h2>
+					<p class="font-semibold">Industry-leading fire protection solutions you can trust</p>
+					<p class="uppercase font-semibold pt-2">Learn more <i class="fa fa-angle-right"></i></p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="flex mb-4" id='main'>
 		<div class="w-full">
 		<h1 class="font-display heading-m text-center text-gray-900 font-bold mt-5 mb-5">Petroglyph UI Kit</h1>
