menu is broke don't know why

--- a/src/design-elements.html
+++ b/src/design-elements.html
@@ -69,7 +69,7 @@
 		<div class="w-full banner-home flex items-center">
 			<div class="flex items-center justify-end bg-blue-500 banner-box">
 				<div class="text-white banner-text">
-					<h2 class="heading-m">Always Safe Always Prepared</h2>
+					<h2 class="page-heading">Always Safe Always Prepared</h2>
 					<p class="font-semibold">Industry-leading fire protection solutions you can trust</p>
 					<p class="uppercase font-semibold pt-2">Learn more <i class="fa fa-angle-right"></i></p>
 				</div>
@@ -78,7 +78,7 @@
 	</div>
 	<div class="flex mb-4" id='main'>
 		<div class="w-full">
-		<h1 class="font-display heading-m text-center text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
+		<h1 class="font-display page-heading text-center text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
 		</div>
 	</div>
 	<div class="flex mb-4">
@@ -190,21 +190,21 @@
 				<td>48px</td>
 			</tr>
 			<tr>
-				<td class="heading-m">Heading Medium</td>
+				<td class="page-heading">Heading Medium</td>
 				<td>Proxima Nova</td>
 				<td>Bold</td>
 				<td>32px</td>
 				<td>56px</td>
 			</tr>
 			<tr>
-				<td class="heading-l">Heading Large</td>
+				<td class="section-heading">Heading Large</td>
 				<td>Proxima Nova</td>
 				<td>Bold</td>
 				<td>36px</td>
 				<td>64px</td>
 			</tr>
 			<tr>
-				<td class="heading-xl">Heading XL</td>
+				<td class="cta-heading">Heading XL</td>
 				<td>Proxima Nova</td>
 				<td>Bold</td>
 				<td>48px</td>
@@ -356,7 +356,7 @@
 		</div>
 		<div class="mx-4 md:mx-0">
 		<div class="w-full md:w-3/4 lg:w-1/2 ml-auto mr-auto font-body my-8 read">
-			<h1 class="heading-m text-gray-900 font-bold">What if your blog title is really, really long? (h1)</h1>
+			<h1 class="page-heading text-gray-900 font-bold">What if your blog title is really, really long? (h1)</h1>
 			<p class="">Petroglyph Creative listens carefully to clients from the start, creating secure, flexible websites configured to your workflows and goals. We start simply and refuse to make things complex when they don’t need to be, exploring options for your company from many angles, because we love to help those who help others. </p>
 			<p class="">Here's another text paragraph. How does the spacing look? Does it look right on mobile? can we make improvements for middle-width devices? Big screens, small screens all about the thread memes.</p>
 			<h2  >Secondary heading (h2)</h2>
