--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 		<div class="w-full banner-home flex items-center">
 			<div class="flex sm:items-center sm:justify-end bg-blue-500 banner-box">
 				<div class="text-white banner-text ml-4 sm:ml-0">
-					<h2 class="heading-m">Always Safe Always Prepared</h2>
+					<h2 class="page-heading">Always Safe Always Prepared</h2>
 					<p class="font-semibold">Industry-leading fire protection solutions you can trust</p>
 					<p class="uppercase font-semibold pt-2">Learn more <i class="fa fa-angle-right"></i></p>
 				</div>
@@ -79,9 +79,9 @@
 	<div class="flex mark mb-4" id='main'>
 		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
 			<div class="flex flex-col lg:flex-row">
-				<div class="w-full lg:w-3/5 mx-4 sm:ml-8 xl:ml-0">
-					<h1 class="font-display heading-xs sm:heading-m uppercase text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
-					<p class="w-5/6">From commerical and industrial projects to multi-family residential buildings, our certified fire protection specialists design, install, and service fire systems that protect lives and property.</p>
+				<div class="w-5/6 lg:w-3/5 ml-4 sm:ml-8 xl:ml-0">
+					<h1 class="font-display heading-xs sm:page-heading uppercase text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
+					<p>From commerical and industrial projects to multi-family residential buildings, our certified fire protection specialists design, install, and service fire systems that protect lives and property.</p>
 				</div>
 				<div class="w-full lg:w-2/5 flex ml-4 xl:ml-0">
 					<ul class="flex flex-col xl:flex-row lg:flex-wrap sm:pl-4 xl:pl-0 mt-6">
@@ -98,7 +98,7 @@
 	</div>
 
 	<div class="flex flex-col mb-4">
-		<div class="w-full mx-4 sm:mx-6 container-main xl:mr-auto xl:ml-auto md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-6">
+		<div class="xl:w-full md:mx-4 container-main lg:mr-auto lg:ml-auto md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-3 lg:gap-6">
 			<div class="md:bg-white ml-auto mr-auto">
 				<a href="#">
 					<div class="card h-full">
@@ -244,18 +244,18 @@
 				</a>
 			</div>
 		</div>
-		<div class="w-full my-8 mx-4 sm:mx-6 container-main xl:mr-auto xl:ml-auto xl:text-center">
+		<div class="w-5/6 my-8 mx-4 sm:mx-6 container-main md:mr-auto md:ml-auto md:text-center">
 			<a href="" class="uppercase text-base">View All Industries <i class="fa fa-angle-right text-blue-500"></i></a>
 		</div>
 	</div>
 
 	<div class="flex bg-white">
-		<div class="w-full mx-4 sm:mx-6 container-main md:mr-auto md:ml-auto">
-			<div class="w-3/4 md:mr-auto md:ml-auto lg:my-12 lg:py-8">
+		<div class="w-full sm:mx-6 container-main md:mr-auto md:ml-auto">
+			<div class="w-5/6 sm:w-1/2 lg:w-3/4 mr-auto ml-auto lg:my-12 lg:py-8">
 				<p class="heading-xs text-blue-500 uppercase">News & Media</p>
-				<div class="flex flex-row">
-					<img src="./assets/img/stadium.jpg" alt="" class="news-image pr-8">
-					<div>
+				<div class="flex flex-col lg:flex-row mb-8">
+					<img src="./assets/img/stadium.jpg" alt="" class="news-image mb-4">
+					<div class="md:pl-8">
 						<h4 class="heading-s">Setting the bar high for retrofit without operational disruption</h4>
 						<p>Rapid Fire Protection was chosen complete the highly complex retrofit of the Mercedes-Benz Stadium. Learn how our nationwide team of experts overcame the many challenges of this project.</p>
 						<a href="" class="uppercase text-base">Read More <i class="fa fa-angle-right text-blue-500"></i></a>
@@ -265,23 +265,21 @@
 		</div>
 	</div>
 	<div class="flex bg-blue-500 cta-image w-full">
-		<div class="w-full xl:ml-auto xl:mr-auto container-main flex flex-col items-center justify-center text-center sm:my-10 xl:my-0">
-			<h3 class="text-white heading-xl w-3/5">Taking care of all your unique fire protection needs.</h3>
+		<div class="w-full xl:ml-auto xl:mr-auto container-main flex flex-col items-center justify-center text-center my-10 xl:my-0">
+			<h3 class="text-white cta-heading w-4/5 md:w-3/5 mb-4">Taking care of all your unique fire protection needs.</h3>
 			<a href="" class="btn-cta uppercase text-white">Request a quote <i class="fa fa-angle-right text-white hover:text-blue-500"></i></a>
 		</div>
 	</div>
 
 	<div class="flex bg-white">
-		<div class="w-full xl:ml-auto xl:mr-auto container-main flex flex-col items-center justify-center text-center sm:my-10 sm:py-6">
-			<h3 class="heading-m uppercase">Join Our Team</h3>
+		<div class="w-full xl:ml-auto xl:mr-auto container-main flex flex-col items-center justify-center text-center my-10 sm:py-6">
+			<h3 class="page-heading uppercase">Join Our Team</h3>
 			<hr class="w-32 m-4 border-blue-500 border-2">
-			<p class="text-base lg:w-2/5">We are experiencing exceptional growth and seeking motivated and committed individuals to join our team!</p>
-			<div class="flex flex-col md:flex-row">
+			<p class="text-base w-4/5 sm:w-2/5">We are experiencing exceptional growth and seeking motivated and committed individuals to join our team!</p>
+			<div class="flex flex-col lg:flex-row job-container">
 				<a href="" class="job-btn">
-					<div class="flex flex-col items-center justify-center">
 						<p class="heading-s font-semibold">Entry-level Estimator</p>
 						<p class="heading-xxs text-blue-500 uppercase">Rapid City, SD</p>
-					</div>
 				</a>
 				<a href="" class="job-btn">
 					<div>
@@ -293,19 +291,102 @@
 		</div>
 	</div>
 
-	<footer class="flex bg-green-800">
-		<div class="w-full font-body px-7">
-		<p class="font-body text-center text-white m-12"> Code by Caroline C. Blaker for <a href="https://www.aquarianwebdesign.com" class="text-blue-200" title="web development agency">Aquarian Web Studio</a> using Tailwind CSS and Webpack. UI Kit Design by <a href="https://block81.com" class="text-blue-200">Block 81</a>.</p>
+	<footer class="flex flex-col bg-green-500">
+		<div class="container-main w-full font-body flex flex-col md:flex-row mr-auto ml-auto text-white mt-12 pt-6 pl-6 xl:pl-0">
+			<div class="flex flex-col w-full lg:w-1/2">
+				<div class="flex flex-col lg:flex-row w-full">
+					<div class="flex flex-col w-full lg:w-1/2">
+						<ul>
+							<li><a href="">Career Opportunities</a></li>
+							<li><a href="">Apprenticeship Program</a></li>
+							<li><a href="">News & Announcements</a></li>
+							<li><a href="">Services</a></li>
+							<li><a href="">Leadership</a></li>
+							<li><a href="">Contact Us</a></li>
+							<li><a href="">Acquisitions</a></li>
+						</ul>
+					</div>
+					<div class="flex flex-col w-full lg:w-1/2">
+						<ul>
+							<li><a href="">About Us</a></li>
+							<li><a href="">Our People</a></li>
+							<li><a href="">Locations</a></li>
+							<li><a href="">Safety</a></li>
+							<li><a href="">Projects</a></li>
+							<li><a href="">Testimonials</a></li>
+							<li><a href="">Interested in Selling?</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="w-full lg:1/2">
+					<div class="social my-8">
+						<h4 class="heading-xxs uppercase">Follow Us</h4>
+						<div>
+							<i class="fa fa-facebook-f"></i>
+							<i class="fab fa-linkedin-in"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="flex flex-col lg:flex-row w-full lg:w-1/2">
+				<div class="flex flex-col w-full lg:w-1/2 states">
+					<div class="mb-8">
+						<h4 class="heading-s mb-2">South Dakota</h4>
+						<a href="" class="text-white uppercase arrow-links"><span class="border-b-1 border-white">View projects in this state</span><i class="fa fa-angle-right no-underline"></i></a>
+						<p class="mt-2">Rapid City, SD</p>
+						<p class="phone-text"><i class="phone text-white"></i>(888) 348-2342</p>
+					</div>
+					<div class="mb-8">
+						<h4 class="heading-s mb-2">Wyoming</h4>
+						<a href="" class="text-white uppercase arrow-links"><span class="border-b-1 border-white">View projects in this state</span><i class="fa fa-angle-right no-underline"></i></a>
+						<p class="mt-2">Casper, WY</p>
+						<p class="phone-text"><i class="phone text-white"></i>(307) 439-4496</p>
+						<p class="mt-2">Cheyenne, WY</p>
+						<p class="phone-text"><i class="phone text-white"></i>(307) 426-4077</p>
+					</div>
+				</div>
+				<div class="flex flex-col w-full lg:w-1/2 states">
+					<div class="mb-8">
+						<h4 class="heading-s mb-2">North Dakota</h4>
+						<a href="" class="text-white uppercase arrow-links"><span class="border-b-1 border-white">View projects in this state</span><i class="fa fa-angle-right no-underline"></i></a>
+						<p class="mt-2">Bismarck, ND</p>
+						<p class="phone-text"><i class="phone text-white"></i>(701) 250-7037</p>
+					</div>
+					<div class="mb-8">
+						<h4 class="heading-s mb-2">Colorado</h4>
+						<a href="" class="text-white uppercase arrow-links"><span class="border-b-1 border-white">View projects in this state</span><i class="fa fa-angle-right no-underline"></i></a>
+						<p class="mt-2">Aurora, CO</p>
+						<p class="phone-text"><i class="phone text-white"></i>(720) 325-5696</p>
+					</div>
+					<div class="mb-8">
+						<h4 class="heading-s mb-2">Utah</h4>
+						<a href="" class="text-white uppercase arrow-links"><span class="border-b-1 border-white">View projects in this state</span><i class="fa fa-angle-right no-underline"></i></a>
+						<p class="mt-2">Salt Lake City, UT</p>
+						<p class="phone-text"><i class="phone text-white"></i>(801) 463-1621</p>
+					</div>
+				</div>
+			</div>
 		</div>
-    </footer>
+		<div class="container-main w-full mr-auto ml-auto copyright pl-6 xl:pl-0">
+			<p>&copy; 2022 Rapid Fire Protection, Inc.</p>
+			<p>Rapid Fire Protection, Inc. <a href="https://rfpg.com/">an RFPG company</a></p>
+		</div>
+		<div class="container-main w-full mr-auto ml-auto">
+			<p class="font-body text-center text-white m-12"> Code by Niki Wolf for <a href="https://www.aquarianwebdesign.com" class="text-blue-200" title="web development agency">Aquarian Web Studio</a> using Tailwind CSS and Webpack. UI Kit Design by <a href="https://block81.com" class="text-blue-200">Block 81</a>.</p>
+		</div>
+	</footer>
+	<div class="totop" style="display: block;">
+		<a class="btn-totop" href="#"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
+	</div>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-22XEEKSHPV"></script>
+	<!--
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-yourTag"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-22XEEKSHPV');
-</script>
+  gtag('config', 'G-yourTag');
+</script> -->
   </body>
 </html>
