fixed overflow hanging issue, menu still needs work on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="flex mark mb-4" id='main'>
 		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
 			<div class="flex flex-col lg:flex-row">
@@ -83,7 +84,7 @@
 					<h1 class="font-display heading-xs sm:page-heading uppercase text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
 					<p>From commerical and industrial projects to multi-family residential buildings, our certified fire protection specialists design, install, and service fire systems that protect lives and property.</p>
 				</div>
-				<div class="w-full lg:w-2/5 flex ml-4 xl:ml-0">
+				<div class="w-5/6 lg:w-2/5 flex ml-4 xl:ml-0">
 					<ul class="flex flex-col xl:flex-row lg:flex-wrap sm:pl-4 xl:pl-0 mt-6">
 						<li><a href="" class="btn-svc">Fire Suppression Systems</a></li>
 						<li><a href="" class="btn-svc">Design & Engineering</a></li>
@@ -264,6 +265,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="flex bg-blue-500 cta-image w-full">
 		<div class="w-full xl:ml-auto xl:mr-auto container-main flex flex-col items-center justify-center text-center my-10 xl:my-0">
 			<h3 class="text-white cta-heading w-4/5 md:w-3/5 mb-4">Taking care of all your unique fire protection needs.</h3>
@@ -290,6 +292,7 @@
 			</div>
 		</div>
 	</div>
+	
 
 	<footer class="flex flex-col bg-green-500">
 		<div class="container-main w-full font-body flex flex-col md:flex-row mr-auto ml-auto text-white mt-12 pt-6 pl-6 xl:pl-0">
