--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,10 @@
 			</div>
 	</header>
 	<div class="flex mb-4">
-		<div class="w-full banner-home flex items-center">
+		<div class="w-full banner-home video-wrapper flex items-center">
+			<div class="video-overlay"></div>
+			<!-- add &playlist=hnp1pt8biD4 (the latter part being the video id) to force it to loop -->
+			<iframe src="https://www.youtube.com/embed/hnp1pt8biD4?autoplay=1&controls=0&disablekb=1&fs=0&loop=1&modestbranding=1&playsinline=1&start=03&mute=1" width="560" height="315" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; loop; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="flex sm:items-center sm:justify-end bg-blue-500 banner-box">
 				<div class="text-white banner-text ml-4 sm:ml-0">
 					<h2 class="page-heading">Always Safe Always Prepared</h2>
