nearly complete, just a handful more elements to include

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A UI kit for Aquarian Web Studio built from WebPack and Tailwind CSS. Free to use and download.">
     <link rel="canonical" href="https://www.aquarianwebdesign.com/ui/" />
 		<script src="https://kit.fontawesome.com/c0a3fc3230.js" crossorigin="anonymous"></script>
-  </head>
+  <link href="styles.css" rel="stylesheet"></head>
 
   <body>
 	<a class="skip-main" href="#main">Skip to main content</a><!-- basic accessibility feature. Move '#main' to your content's container-->
@@ -540,7 +540,6 @@
 						</div>
 						<h3 class="timeline-title">Event Title</h3>
 						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque. </p>
-						<div class="image"></div>
 					</div>
 				</li>
 				<li class="timeline-item">
@@ -554,10 +553,10 @@
 					</div>
 				</li>
 			</ul>
-			<div class="w-5/6 read mb-8">
+			<div class="w-full read mb-8">
 				<h4>Acquisition Opportunities</h4>
 				<p>Interested in joining us? We are seeking leading fire protection services organizations to expand our team and grow our national presence. Learn how you can accelerate your growth goals.</p>
-				<a href="" class="btn-cta uppercase my-4">Learn About Acquisitions</a>
+				<a href="" class="btn-cta uppercase mt-4">Learn About Acquisitions</a>
 			</div>
 		</div>
 	</div>
@@ -706,5 +705,5 @@
 
   gtag('config', 'G-yourTag');
 </script> -->
-  </body>
+  <script type="text/javascript" src="main.js"></script><script type="text/javascript" src="styles.js"></script></body>
 </html>
