--- a/src/homepage.html
+++ b/src/homepage.html
@@ -70,7 +70,7 @@
 
 	<!-- Homepage banner -->
 	<div class="flex mb-4">
-		<div class="w-full banner-home banner-video-wrapper flex items-center">
+		<div class="w-full banner-home video-wrapper flex items-center">
 			<div class="video-overlay"></div>
 			<!-- add &playlist=hnp1pt8biD4 (the latter part being the video id) to force it to loop -->
 			<iframe src="https://www.youtube.com/embed/hnp1pt8biD4?autoplay=1&controls=0&disablekb=1&fs=0&loop=1&modestbranding=1&playsinline=1&start=03&mute=1" width="560" height="315" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; loop; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -87,13 +87,13 @@
 	<!-- Homepage heading section with specific page links -->
 	<div class="flex mark mb-4" id='main'>
 		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
-			<div class="flex flex-col lg:flex-row mt-12">
+			<div class="flex flex-col lg:flex-row">
 				<div class="w-5/6 lg:w-3/5 ml-4 sm:ml-8 xl:ml-0">
-					<h1 class="font-display heading-xs sm:page-heading uppercase text-gray-900 font-bold mb-5">Fire Protection Systems & Services</h1>
+					<h1 class="font-display heading-xs sm:page-heading uppercase text-gray-900 font-bold mt-5 mb-5">Fire Protection Systems & Services</h1>
 					<p>From commerical and industrial projects to multi-family residential buildings, our certified fire protection specialists design, install, and service fire systems that protect lives and property.</p>
 				</div>
 				<div class="w-5/6 lg:w-2/5 flex ml-4 xl:ml-0">
-					<ul class="flex flex-col xl:flex-row lg:flex-wrap sm:pl-4 xl:pl-0 md:mt-6 lg:mt-2">
+					<ul class="flex flex-col xl:flex-row lg:flex-wrap sm:pl-4 xl:pl-0 mt-6">
 						<li><a href="" class="btn-svc">Fire Suppression Systems</a></li>
 						<li><a href="" class="btn-svc">Design & Engineering</a></li>
 						<li><a href="" class="btn-svc">Fire Alarm & Security</a></li>
@@ -106,19 +106,9 @@
 		</div>
 	</div>
 
-	<!-- other page heading section - no page links -->
-	<div class="flex mark mb-4" id='main'>
-		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
-			<div class="w-5/6 lg:w-2/3 ml-4 lg:mr-auto lg:ml-auto lg:text-center">
-				<h1 class="font-display section-heading sm:page-heading text-gray-900 font-bold mt-5 mb-5">Industries We Serve</h1>
-				<p>Rapid Fire Protection is a nationwide fire protection solutions provider for a wide variety of industries. From commercial fire alarm and sprinkler systems to sophisticated fire suppression solutions in the most challenging environments, we bring the right expertise and experience to ensure you are ALWAYS SAFE, ALWAYS PREPARED.</p>
-			</div>
-		</div>
-	</div>
-
 	<!-- Industries served image/link section -->
 	<div class="flex flex-col mb-4">
-		<div class="xl:w-full md:mx-4 container-main xl:mr-auto xl:ml-auto md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-3 lg:gap-6">
+		<div class="xl:w-full md:mx-4 container-main lg:mr-auto lg:ml-auto md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-3 lg:gap-6">
 			<div class="md:bg-white ml-auto mr-auto">
 				<a href="#">
 					<div class="card h-full">
@@ -266,299 +256,6 @@
 		</div>
 		<div class="w-5/6 my-8 mx-4 sm:mx-6 container-main md:mr-auto md:ml-auto md:text-center">
 			<a href="" class="uppercase text-base">View All Industries <i class="fa fa-angle-right text-blue-500"></i></a>
-		</div>
-	</div>
-
-	<!-- Industries detail H1 header w/background -->
-	<!-- for locations H1 header w/background swap out 'detail-banner' class for 'location-banner' -->
-
-	<div class="flex flex-col mb-4">
-		<div class="w-full bg-green-500">
-			<div class="container-main ml-4 xl:ml-auto xl:mr-auto my-4">
-				<p><span class="breadcrumb">Industries | <span class="active">Healthcare</span></span></p>
-			</div>
-		</div>
-		<div class="w-full detail-banner py-12">
-			<div class="container-main ml-4 xl:ml-auto xl:mr-auto my-8"><h1 class="font-display section-heading text-white">Fire Protection Systems & Services</h1></div>
-		</div>
-	</div>
-
-	<!-- Industries detail heading -->
-	<div class="flex mark mb-4" id='main'>
-		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
-			<div class="flex flex-col lg:flex-row mt-12">
-				<div class="w-5/6 lg:w-3/5 ml-4 sm:ml-8 xl:ml-0">
-					<p>From commerical and industrial projects to multi-family residential buildings, our certified fire protection specialists design, install, and service fire systems that protect lives and property.</p>
-				</div>
-				<div class="w-5/6 lg:w-2/5 flex ml-4 xl:ml-0">
-					<ul class="flex flex-col xl:flex-row lg:flex-wrap sm:pl-4 xl:pl-0">
-						<li><a href="" class="btn-svc">Fire Suppression Systems</a></li>
-						<li><a href="" class="btn-svc">Design & Engineering</a></li>
-						<li><a href="" class="btn-svc">Fire Alarm & Security</a></li>
-						<li><a href="" class="btn-svc">Service & Inspection</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Industries detail cards -->
-	<div class="flex flex-col mb-4">
-		<div class="xl:w-full md:mx-4 container-main xl:mr-auto xl:ml-auto md:grid md:grid-cols-2 lg:grid-cols-3 md:auto-rows-fr md:gap-6 mt-4">
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p class="text-small my-8">Other details to Convey Scope.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p class="text-small my-8">Other details to Convey Scope.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p class="text-small my-8">Other details to Convey Scope.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p class="text-small my-8">Other details to Convey Scope.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="flex-grab ml-auto mr-auto">
-				<a href="#">
-					<div class="card">
-						<img class="" src="./assets/img/lone-peak-hospital.jpg" alt="Lone Peak Hospital">
-						<div class="px-6 py-4 bg-white">
-							<h4 class="">Lone Peak Hospital</h4>
-							<h5>Draper, UT</h5>
-							<p class="text-small my-8">Other details to Convey Scope.</p>
-						</div>
-					</div>
-				</a>
-			</div>
-		</div>
-		<div class="w-5/6 my-8 mx-4 sm:mx-6 container-main md:mr-auto md:ml-auto md:text-center">
-			<a href="" class="uppercase text-base">View More Projects <i class="fa fa-angle-right text-blue-500"></i></a>
-		</div>
-	</div>
-
-	<!-- Service detail heading section -->
-	<div class="flex mark mb-4" id='main'>
-		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
-			<div class="flex flex-col-reverse md:w-2/3 xl:w-full md:mr-auto md:ml-auto xl:flex-row mt-12 svc-cta-container">
-				<div class="w-5/6 xl:w-3/5 mr-auto ml-auto sm:ml-8 xl:ml-0">
-					<h4 class="heading-xxs text-blue-500 uppercase">Design &#8226; Installation &#8226; Service &#8226; Inspection</h4>
-					<div class="read">
-						<p>Certain situations call for options outside of water in the commercial and industrial marketplaces. Rapid Fire Protection provides a full line of alternatives and expertise, including special hazard, dry chemical and various other fire suppression systems:</p>
-						<ul class="font-bold">
-							<li>Foam and deluge systems</li>
-							<li>FM-200&#174; Fire Suppression</li>
-							<li>CO2 Systems</li>
-							<li>Wet and dry chemical agents</li>
-						</ul>
-						<p>Our NICET certified engineers and designers, will work with you to determine the best suppression system for your application.</p>
-					</div>
-				</div>
-				<div class="w-5/6 xl:w-2/5 mr-auto ml-auto sm:ml-8 xl:ml-4">
-					<img src="./assets/img/fire-suppression.jpg" alt="" class="mb-4">
-					<div class="svc-cta-box flex flex-row show-for-large-flex">
-						<div class="w-2/5"><p class="text-white">Taking care of all your Fire Protection needs!</p></div>
-						<div class="w-1/2 ml-10 mt-4"><a href="" class="btn-cta uppercase">Request a Quote <i class="fa fa-angle-right"></i></a></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Vimeo embed section -->
-	<div class="flex mb-4">
-		<div class="mr-auto ml-auto w-5/6">
-			<div class="videoWrapper ml-auto mr-auto">
-				<iframe src="https://player.vimeo.com/video/235215203?h=f7635d145a" width="1029" height="574" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
-	</div>
-
-	<!-- Text quote section -->
-	<div class="flex mb-4 w-5/6 mr-auto ml-auto">
-		<div class="mr-auto ml-auto w-full md:w-2/3 xl:w-1/2 read">
-			<img src="/assets/img/quotes.svg" alt="green quotation mark"  width="30px">
-			<blockquote class="mx-4 lg:mx-0">
-				<p>I'm extremely grateful to be working at RFP, ut consequat odio ultricies sed. Pellentesque faucibus nisi in urna vulputate convallis. Nunc nec mauris ut tortor dignissim consectetur. Suspendisse malesuada ante a congue porta. Nam id mauris non erat congue sagittis. Morbi accumsan, turpis quis gravida convallis, libero lacus accumsan metus, nec imperdiet ligula eros in ipsum. Nunc nec mauris ut tortor dignissim consectetur.</p>
-			</blockquote>
-			<p class="mx-4 lg:mx-0 quote">Aaron King <br/><span class="uppercase">Project Manager</span></p>
-		</div>
-	</div>
-
-	<!-- image gallery section -->
-	<div class="flex flex-col mb-4">
-		<div class="xl:w-full md:mx-4 container-gallery xl:mr-auto xl:ml-auto">
-			<img src="./assets/img/big_img_01.jpg" alt="">
-		</div>
-		<div class="xl:w-full md:mx-4 container-gallery xl:mr-auto xl:ml-auto">
-			<div class=" md:grid md:grid-cols-3 lg:grid-cols-4 auto-rows-fr gap-3 lg:gap-6 gallery">
-				<div class="h-full place-self-center">
-					<img class="w-full" src="./assets/img/img_01.jpg" alt="Image">
-				</div>
-				<div class="h-full place-self-center">
-					<img class="w-full" src="./assets/img/img_02.jpg" alt="Image">
-				</div>
-				<div class="h-full place-self-center">
-					<img class="w-full" src="./assets/img/img_03.jpg" alt="Image">
-				</div>
-				<div class="h-full place-self-center">
-					<img class="w-full" src="./assets/img/img_04.jpg" alt="Image">
-				</div>
-				<div class="h-full place-self-center">
-					<img class="w-full" src="./assets/img/img_05.jpg" alt="Image">
-				</div>
-				<div class="h-full place-self-center">
-					<img class="w-full" src="./assets/img/img_06.jpg" alt="Image">
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Centered text block -->
-	<div class="flex mb-4">
-		<div class="w-5/6 lg:w-2/3 container-main md:mr-auto md:ml-auto read flex md:flex-row md:justify-center my-6">
-			<p>Pellentesque faucibus nisi in urna vulputate RFPG. Nunc nec mauris ut tortor dignissim consectetur. Suspendisse malesuada ante a congue porta. Nam id mauris non erat congue sagittis. Morbi accumsan, turpis quis gravida convallis, libero lacus accumsan metus, nec imperdiet ligula eros in ipsum. Nunc nec mauris ut tortor dignissim consectetur. RFPG lacus accumsan metus, nec imperdiet ligula eros in ipsum. Nunc nec mauris ut tortor dignissim.</p>
-		</div>
-	</div>
-
-	<!-- Blue info boxes -->
-	<div class="flex mb-4">
-		<div class="w-full lg:w-5/6 container-main mx-4 md:mr-auto md:ml-auto">
-			<div class="flex flex-col md:flex-row md:justify-center">
-				<div class="bg-blue-500 text-white text-center p-8 border-b-1 md:border-r-1 border-white md:w-1/3">
-					<p class="page-heading ">100,562</p>
-					<p class="uppercase text-lg">Apprentices</p>
-				</div>
-				<div class="bg-blue-500 text-white text-center p-8 border-b-1 md:border-r-1 border-white md:w-1/3">
-					<p class="page-heading">16</p>
-					<p class="uppercase text-lg">National ABC Finalists</p>
-				</div>
-				<div class="bg-blue-500 text-white text-center p-8 border-b-1 md:border-r-1 border-white md:w-1/3">
-					<p class="page-heading">3</p>
-					<p class="uppercase text-lg">National ABC Winners</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- learn more button -->
-	<div class="flex mb-4">
-		<div class="mr-auto ml-auto my-12">
-			<a href="#" class="btn-cta mb-4 uppercase">Learn More</a>
-		</div>
-	</div>
-
-	<!-- Our Company section with buttons -->
-	<div class="flex mb-4" id='main'>
-		<div class="w-full container-main mt-4 mb-8 mr-auto ml-auto">
-			<div class="w-5/6 lg:w-2/3 mark ml-4 md:mr-auto md:ml-auto lg:text-center mb-8">
-				<h1 class="font-display section-heading sm:page-heading text-gray-900 font-bold mt-5 mb-5">Rapid Fire Protection, Inc.</h1>
-				<p>Rapid Fire Protection is more than a fire protection contractor, we are your partner who protects your property and assets with custom fire sprinkler, suppression and alarm systems - designed, installed and serviced by the industries best. We are proud to offer fire protection systems and services across the nation and internationally. With projects completed in more than half of the U.S. and over 25 years of experience, we have the team and expertise to provide you with the solution that best fits your needs.</p>
-			</div>
-			<div class="w-5/6 md:mr-auto md:ml-auto flex flex-col my-8 lg:flex-row items-stretch md:justify-evenly">
-				<a href="#" class="btn-cta flex-1 uppercase text-center lg:mr-2">About Us</a>
-				<a href="#" class="btn-cta flex-1 uppercase text-center lg:mr-2">Our People</a>
-				<a href="#" class="btn-cta flex-1 uppercase text-center lg:mr-2">Locations</a>
-				<a href="#" class="btn-cta flex-1 uppercase text-center lg:mr-2">Safety</a>
-				<a href="#" class="btn-cta flex-1 uppercase text-center lg:mr-2">News</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- timeline section -->
-	<div class="flex mb-4">
-		<div class="container-main mx-5 sm:w-full lg:mr-auto lg:ml-auto">
-			<ul class="timeline timeline-centered">
-				<li class="timeline-item">
-					<div class="timeline-marker"></div>
-					<div class="timeline-content">
-						<div class="timeline-info">
-							<span>1993</span>
-						</div>
-						<h3 class="timeline-title">Rapid Fire Protection, Inc. founded</h3>
-						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque.</p>
-						<div class="image"></div>
-					</div>
-				</li>
-				<li class="timeline-item">
-					<div class="timeline-marker"></div>
-					<div class="timeline-content">
-						<h4 class="timeline-info">2002</h4>
-						<h3 class="timeline-title">Event Title</h3>
-						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque. </p>
-					</div>
-				</li>
-				<li class="timeline-item">
-					<div class="timeline-marker"></div>
-					<div class="timeline-content">
-						<div class="timeline-info">
-							<span>2018</span>
-						</div>
-						<h3 class="timeline-title">Event Title</h3>
-						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque. </p>
-					</div>
-				</li>
-				<li class="timeline-item">
-					<div class="timeline-marker"></div>
-					<div class="timeline-content">
-						<div class="timeline-info">
-							<span>2019</span>
-						</div>
-						<h3 class="timeline-title">Event Title</h3>
-						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque. </p>
-						<div class="image"></div>
-					</div>
-				</li>
-				<li class="timeline-item">
-					<div class="timeline-marker"></div>
-					<div class="timeline-content">
-						<div class="timeline-info">
-							<span>2021</span>
-						</div>
-						<h3 class="timeline-title">Pye-Barker Fire</h3>
-						<p>Nullam vel sem. Nullam vel sem. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Donec orci lectus, aliquam ut, faucibus non, euismod id, nulla. Donec vitae sapien ut libero venenatis faucibus. ullam dictum felis eu pede mollis pretium. Pellentesque ut neque. </p>
-					</div>
-				</li>
-			</ul>
-			<div class="w-5/6 read mb-8">
-				<h4>Acquisition Opportunities</h4>
-				<p>Interested in joining us? We are seeking leading fire protection services organizations to expand our team and grow our national presence. Learn how you can accelerate your growth goals.</p>
-				<a href="" class="btn-cta uppercase my-4">Learn About Acquisitions</a>
-			</div>
 		</div>
 	</div>
 
